# voice-sandwich-demo

components/python/: pyproject.toml
components/python/src/: assemblyai_stt.py  cartesia_stt.py  main.py
components/typescript/: package.json  pnpm-lock.yaml
components/typescript/src/: index.ts
components/typescript/src/cartesia/: stt.ts  tts.ts
